# sentinel-events

./: .env.example  .gitignore  .pre-commit-config.yaml  .python-version  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: async-notes.md
scripts/: simulate.py
src/sentinel_events/: main.py  models.py  store.py
static/: live.html
tests/: conftest.py  test_endpoints.py
