[project]
name = "sentinel-events"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "pydantic>=2.0",
    "websockets",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "ruff",
    "black",
    "mypy",
    "pre-commit",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"